...

    override fun onBeginGetCredentialRequest(
        request: BeginGetCredentialRequest,
        cancellationSignal: CancellationSignal,
        callback: OutcomeReceiver<BeginGetCredentialResponse, GetCredentialException>,
    ) {
        val work = scope.launch {
            val answer = try {
                answerBeginGet(
                    this@HavenCredentialService,
                    request,
                    container.events.unlocked.value,
                    container.credentialRepository,
...
